--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -11,6 +11,7 @@
   <string name="AbstractNotificationBuilder_new_message">Ново съобщение</string>
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
+  <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">В момента: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Все още не сте заложили парола!</string>
@@ -899,8 +900,6 @@
   <string name="database_migration_activity__import">Внасяне</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">Това може да отнеме малко време. Моля, за търпение, ще те уведомим, когато вносът е завършен.</string>
   <string name="database_migration_activity__importing">ВНАСЯНЕ</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">Обновяване на базата данни...</string>
   <string name="import_fragment__import_system_sms_database">Внасяне на всички вече съществуващи SMS-и</string>
   <string name="import_fragment__import_the_database_from_the_default_system">Внасяне на базата данни от системната програма за съобщения.</string>
   <string name="import_fragment__import_plaintext_backup">Внасяне на некриптиран архив </string>
@@ -1166,6 +1165,7 @@
   <string name="conversation_list_batch_archive__menu_archive_selected">Архивът е избран</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Деархивирай изрбания</string>
   <!--conversation_list-->
+  <string name="conversation_list_search_description">Търсене</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Изображение на контакта</string>
   <string name="conversation_list_item_view__archived">Архивиран</string>
