--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -11,6 +11,7 @@
   <string name="AbstractNotificationBuilder_new_message">Ny besked</string>
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
+  <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Nuværende: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Du har ikke indtastet et kodeord</string>
@@ -927,8 +928,6 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="database_migration_activity__import">Importér</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">Det kan tage et øjeblik. Vent venligst indtil importen er fuldført</string>
   <string name="database_migration_activity__importing">IMPORTERER</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">Opdaterer databasen...</string>
   <string name="import_fragment__import_system_sms_database">Importér system SMS databasen</string>
   <string name="import_fragment__import_the_database_from_the_default_system">Importér databasen fra systemets standard SMS applikation</string>
   <string name="import_fragment__import_plaintext_backup">Importér klartekst backup</string>
@@ -1194,6 +1193,7 @@ Modtog en nøgle besked, for en ugyldig protokol-version.
   <string name="conversation_list_batch_archive__menu_archive_selected">Arkivér valgte</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Flyt fra arkiv til oversigt</string>
   <!--conversation_list-->
+  <string name="conversation_list_search_description">Søg</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Kontaktbillede</string>
   <string name="conversation_list_item_view__archived">Arkiveret</string>
