--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -11,6 +11,7 @@
   <string name="AbstractNotificationBuilder_new_message">Νέο μήνυμα</string>
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
+  <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Αυτή τη στιγμή: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Δεν έχετε ορίσει συνθηματικό ακόμα!</string>
@@ -922,8 +923,6 @@
   <string name="database_migration_activity__import">Εισαγωγή</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">Παρακαλώ περιμένετε, αυτό μπορεί να πάρει λίγη ώρα. Θα σας ειδοποιήσουμε μόλις τελειώσει η εισαγωγή.</string>
   <string name="database_migration_activity__importing">ΕΙΣΑΓΩΓΗ</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">Ενημέρωση βάσης δεδομένων...</string>
   <string name="import_fragment__import_system_sms_database">Εισαγωγή της βάσης δεδομένων SMS του συστήματος</string>
   <string name="import_fragment__import_the_database_from_the_default_system">Εισαγωγή της βάσης δεδομένων από την προκαθορισμένη συσκευή μηνυμάτων του συστήματος</string>
   <string name="import_fragment__import_plaintext_backup">Εισαγωγή μη κρυπτογραφημένου αντίγραφου ασφαλείας</string>
@@ -1189,6 +1188,7 @@
   <string name="conversation_list_batch_archive__menu_archive_selected">Αρχειοθέτηση επιλεγμένων</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Απαρχειοθέτηση επιλέχθηκε</string>
   <!--conversation_list-->
+  <string name="conversation_list_search_description">Αναζήτηση</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Φωτογραφία επαφής</string>
   <string name="conversation_list_item_view__archived">Αρχειοθετημένα</string>
