--- a/res/values-eo/strings.xml
+++ b/res/values-eo/strings.xml
@@ -11,6 +11,7 @@
   <string name="AbstractNotificationBuilder_new_message">Nova mesaĝo</string>
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
+  <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Aktuale: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Vi ankoraŭ ne metis pasfrazon!</string>
@@ -940,8 +941,6 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="database_migration_activity__import">Importi</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">Tio povas daŭri longe. Bv. pacienci, ni sciigos vin, kiam la importado plenumos.</string>
   <string name="database_migration_activity__importing">IMPORTADO</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">Ĝisdatigo de datumbazo...</string>
   <string name="import_fragment__import_system_sms_database">Importi sisteman SMS-datumbazon</string>
   <string name="import_fragment__import_the_database_from_the_default_system">Importi datumbazon el la defaŭlta sistema mesaĝilo</string>
   <string name="import_fragment__import_plaintext_backup">Importi nurtekstan savkopion</string>
@@ -1208,6 +1207,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Elarĥivigi elektitajn</string>
   <!--conversation_list-->
   <string name="conversation_list_settings_shortcut">Ŝparvojo al agordoj</string>
+  <string name="conversation_list_search_description">Serĉi</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Kontakta bildo</string>
   <string name="conversation_list_item_view__archived">Enarĥivigitaj</string>
