--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -11,6 +11,8 @@
   <string name="AbstractNotificationBuilder_new_message">Uus sõnum</string>
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
+  <!--ApplicationMigrationActivity-->
+  <string name="ApplicationMigrationActivity__signal_is_updating">Signal uueneb...</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Hetkel: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Sa pole veel salaväljendit määranud!</string>
@@ -941,8 +943,6 @@
   <string name="database_migration_activity__import">Impordi</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">See võib aega võtta. Palun ole kannatlik, me anname teada kui import on valmis.</string>
   <string name="database_migration_activity__importing">IMPORTIMINE</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">Uuendan andmebaasi</string>
   <string name="import_fragment__import_system_sms_database">Impordi süsteemi SMS-andmebaas</string>
   <string name="import_fragment__import_the_database_from_the_default_system">Impordi andmebaas vaikimisi süsteemi sõnumirakendusest</string>
   <string name="import_fragment__import_plaintext_backup">Impordi lihtteksti varundus</string>
@@ -1209,6 +1209,7 @@
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Võta valitud arhiivist välja</string>
   <!--conversation_list-->
   <string name="conversation_list_settings_shortcut">Seadete otsetee</string>
+  <string name="conversation_list_search_description">Otsi</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Kontakti foto pilt</string>
   <string name="conversation_list_item_view__archived">Arhiveeritud</string>
