--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -11,6 +11,7 @@
   <string name="AbstractNotificationBuilder_new_message">Nova poruka</string>
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
+  <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Trenutno: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Još niste postavili lozinku!</string>
@@ -949,8 +950,6 @@ Primljena poruka razmjene ključeva za pogrešnu inačicu protokola.</string>
   <string name="database_migration_activity__import">Uvoz</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">Ovo može potrajati nekoliko trenutaka. Budite strpljivi, obavijestit ćemo vas kada uvoz bude gotov.</string>
   <string name="database_migration_activity__importing">UVOZ</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">Ažuriranje baze podataka...</string>
   <string name="import_fragment__import_system_sms_database">Uvezi SMS bazu podataka sustava</string>
   <string name="import_fragment__import_the_database_from_the_default_system">Uvezi bazu podataka iz zadane aplikacije za poruke</string>
   <string name="import_fragment__import_plaintext_backup">Uvezi nekriptiranu kopiju</string>
@@ -1219,6 +1218,7 @@ Uvezi nekriptiranu kopiju. Kompatibilno s \'SMSBackup And Restore\'.</string>
   <string name="conversation_list_batch_archive__menu_archive_selected">Odabran arhiv</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Odabrano raspakiranje arhive</string>
   <!--conversation_list-->
+  <string name="conversation_list_search_description">Traži</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Slika kontakta</string>
   <string name="conversation_list_item_view__archived">Arhivirano</string>
