--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -11,6 +11,8 @@
   <string name="AbstractNotificationBuilder_new_message">Nuovo messaggio</string>
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
+  <!--ApplicationMigrationActivity-->
+  <string name="ApplicationMigrationActivity__signal_is_updating">Signal si sta aggiornando...</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">In questo momento: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Non hai ancora impostato una password!</string>
@@ -938,8 +940,6 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="database_migration_activity__import">Importa</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">Potrebbe volerci un po\'. Attendi per favore, verrai notificato quando l\'importazione sarà completata.</string>
   <string name="database_migration_activity__importing">COPIA</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">Aggiornando il database...</string>
   <string name="import_fragment__import_system_sms_database">Importa gli SMS dal database criptato</string>
   <string name="import_fragment__import_the_database_from_the_default_system">Importa i messaggi dall\'app di sistema per gli SMS</string>
   <string name="import_fragment__import_plaintext_backup">Importare copia in chiaro</string>
@@ -1206,6 +1206,7 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Non archiviate selezionato</string>
   <!--conversation_list-->
   <string name="conversation_list_settings_shortcut">Scorciatoia impostazioni</string>
+  <string name="conversation_list_search_description">Cerca</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Foto del contatto</string>
   <string name="conversation_list_item_view__archived">Archiviate</string>
