--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -11,6 +11,7 @@
   <string name="AbstractNotificationBuilder_new_message">新着メッセージ</string>
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
+  <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">現在： %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">パスワードが登録されていません。</string>
@@ -903,8 +904,6 @@
   <string name="database_migration_activity__import">インポート</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">この作業は時間がかかります。しばらくお待ち下さい。インポートが完了すると、通知されます。</string>
   <string name="database_migration_activity__importing">インポート中</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">データベースを更新中…</string>
   <string name="import_fragment__import_system_sms_database">システムのSMSデータベースをインポート</string>
   <string name="import_fragment__import_the_database_from_the_default_system">デフォルトのメッセージアプリからデータベースをインポートする</string>
   <string name="import_fragment__import_plaintext_backup">平文テキストのバックアップをインポート</string>
@@ -1169,6 +1168,7 @@
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">選択した会話をアーカイブから取り除く</string>
   <!--conversation_list-->
   <string name="conversation_list_settings_shortcut">設定のショートカット</string>
+  <string name="conversation_list_search_description">検索</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">連絡先の画像</string>
   <string name="conversation_list_item_view__archived">アーカイブ済み</string>
