--- a/res/values-ku/strings.xml
+++ b/res/values-ku/strings.xml
@@ -11,6 +11,7 @@
   <string name="AbstractNotificationBuilder_new_message">Peyama nû</string>
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">%d+\</string>
+  <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Vê gavê: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Heta niha te ti pêborîn diyar nekiriye!</string>
@@ -849,8 +850,6 @@
   <string name="database_migration_activity__import">Têbixê</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">Hinek dem pêwîst e. Ka sebir bike, dema têxistin xelas be em ê ji te re bêjin.</string>
   <string name="database_migration_activity__importing">TÊ TÊXISTIN</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">Danegeh tê hildemandin...</string>
   <string name="import_fragment__import_system_sms_database">Danegeha SMSê ya pergalê têbixe</string>
   <string name="import_fragment__import_the_database_from_the_default_system">Danegehê ji sepana peyaman ya jixweber bîne</string>
   <string name="import_fragment__import_plaintext_backup">Kopiya paşkefta nivîsa sade têbixe</string>
@@ -1115,6 +1114,7 @@
   <string name="conversation_list_batch_archive__menu_archive_selected">Yên bijartî arşîv bike</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Yên bijartî ji arşîvê derxîne</string>
   <!--conversation_list-->
+  <string name="conversation_list_search_description">Lê bigere</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Wêneya Berdengê</string>
   <string name="conversation_list_item_view__archived">Arşîvkirî ye</string>
