--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -11,6 +11,8 @@
   <string name="AbstractNotificationBuilder_new_message">Nauja žinutė</string>
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
+  <!--ApplicationMigrationActivity-->
+  <string name="ApplicationMigrationActivity__signal_is_updating">Signal atsinaujina...</string>
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Šiuo metu: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Jūs dar nesate nustatę slaptafrazės!</string>
@@ -995,8 +997,6 @@
   <string name="database_migration_activity__import">Importuoti</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">Tai gali šiek tiek užtrukti. Būkite kantrūs, mes pranešime, kai importavimas bus užbaigtas.</string>
   <string name="database_migration_activity__importing">IMPORTUOJAMA</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">Atnaujinama duomenų bazė...</string>
   <string name="import_fragment__import_system_sms_database">Importuoti sistemos SMS duomenų bazę</string>
   <string name="import_fragment__import_the_database_from_the_default_system">Importuoti duomenų bazę iš numatytosios sistemos pokalbių programėlės</string>
   <string name="import_fragment__import_plaintext_backup">Importuoti grynojo teksto atsarginę kopiją</string>
@@ -1267,6 +1267,7 @@
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Išarchyvuoti pasirinktus</string>
   <!--conversation_list-->
   <string name="conversation_list_settings_shortcut">Nustatymų šaukinys</string>
+  <string name="conversation_list_search_description">Ieškoti</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Adresato nuotraukos paveikslas</string>
   <string name="conversation_list_item_view__archived">Archyvuota</string>
