--- a/res/values-my/strings.xml
+++ b/res/values-my/strings.xml
@@ -9,6 +9,7 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">စာအသစ်</string>
   <!--AlbumThumbnailView-->
+  <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">လက်ရှိ: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">စကားဝှက်မသတ်မှတ်ရသေးပါ</string>
@@ -765,8 +766,6 @@
   <string name="database_migration_activity__import">သွင်းယူသည်။</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">ခေတ္တကြာပါလိမ့်မယ်။ တင်သွင်းမှု ပြီးဆုံးသွားရင် အကြောင်းကြားပေးပါမယ်။</string>
   <string name="database_migration_activity__importing">သွင်းယူဆဲ</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">အချက်အလက်များကို ထပ်မံထည့်သွင်းနေသည် </string>
   <string name="import_fragment__import_system_sms_database">ဖုန်းစနစ်၏ SMS အချက်အလက်များကို ထည့်သွင်းသည် </string>
   <string name="import_fragment__import_the_database_from_the_default_system">မူရင်းစနစ် မက်ဆင်ဂျာ app မှအချက်အလက်များကို တင်ပို့သည် </string>
   <string name="import_fragment__import_plaintext_backup">အရံသိမ်းထားသော စာများကို တင်သွင်းသည်</string>
@@ -1017,6 +1016,7 @@
   <string name="conversation_list_batch_archive__menu_archive_selected">မှတ်တမ်းကို ရွေးချယ်ပြီး</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">မှတ်တမ်းမှ ပြန်ထုတ်ခြင်းကို ရွေးချယ်ပြီး</string>
   <!--conversation_list-->
+  <string name="conversation_list_search_description">ရှာရန်</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">လိပ်စာစာရင်းအတွက် ပုံ</string>
   <string name="conversation_list_item_view__archived">မှတ်တမ်းသိမ်းပြီး</string>
