--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -11,6 +11,7 @@
   <string name="AbstractNotificationBuilder_new_message">Ny melding</string>
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
+  <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Gjeldende: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Du har ikke angitt en passordfrase ennå!</string>
@@ -935,8 +936,6 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <string name="database_migration_activity__import">Importer</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">Dette kan ta litt tid. Vær tålmodig. Vi varsler deg når importering er fullført.</string>
   <string name="database_migration_activity__importing">IMPORTERER</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">Oppdaterer database …</string>
   <string name="import_fragment__import_system_sms_database">Importer systemets SMS-database</string>
   <string name="import_fragment__import_the_database_from_the_default_system">Importer database fra systemets forvalgte meldingsprogram</string>
   <string name="import_fragment__import_plaintext_backup">Importer ukryptert sikkerhetskopi</string>
@@ -1203,6 +1202,7 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Angre arkivering av valgte</string>
   <!--conversation_list-->
   <string name="conversation_list_settings_shortcut">Innstillinger snarvei</string>
+  <string name="conversation_list_search_description">Søk</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Kontaktfotobilde</string>
   <string name="conversation_list_item_view__archived">Arkivert</string>
