--- a/res/values-nn/strings.xml
+++ b/res/values-nn/strings.xml
@@ -11,6 +11,7 @@
   <string name="AbstractNotificationBuilder_new_message">Ny melding</string>
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
+  <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Gjeldande: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Du har ikkje valt ein passordfrase endå.</string>
@@ -938,8 +939,6 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversjon.</string>
   <string name="database_migration_activity__import">Importar</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">Dette kan ta litt tid. Vêr tålmodig. Vi varslar deg når importeringa er fullført.</string>
   <string name="database_migration_activity__importing">IMPORTERER</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">Oppdaterer database …</string>
   <string name="import_fragment__import_system_sms_database">Importer systemet sin SMS-database</string>
   <string name="import_fragment__import_the_database_from_the_default_system">Importer database frå standard meldingsprogram til systemet </string>
   <string name="import_fragment__import_plaintext_backup">Importer klartekst-tryggleikskopi</string>
@@ -1208,6 +1207,7 @@ Ved registrering sender me litt kontaktinformasjon til tenaren. Informasjonen ve
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Angra arkivering av utval</string>
   <!--conversation_list-->
   <string name="conversation_list_settings_shortcut">Snarveg til innstillingar</string>
+  <string name="conversation_list_search_description">Søk</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Kontaktfoto</string>
   <string name="conversation_list_item_view__archived">Arkivert</string>
