--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -11,6 +11,7 @@
   <string name="AbstractNotificationBuilder_new_message">Нова порука</string>
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
+  <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Тренутно: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Још нисте поставили лозинку!</string>
@@ -808,8 +809,6 @@
   <string name="database_migration_activity__import">Увези</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">Ово би могло мало да потраје. Будите стрпљиви, обавестићемо вас када се увоз заврши.</string>
   <string name="database_migration_activity__importing">УВОЗИМ</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">Ажурирам базу података...</string>
   <string name="import_fragment__import_system_sms_database">Увези системску СМС базу података</string>
   <string name="import_fragment__import_the_database_from_the_default_system">Увоз базе података из подразумеване системске апликације за размену порука</string>
   <string name="import_fragment__import_plaintext_backup">Увези текстуалну резерву</string>
@@ -1048,6 +1047,7 @@
   <string name="conversation_list_batch_archive__menu_archive_selected">Архивирај изабрано</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Деархивирај изабрано</string>
   <!--conversation_list-->
+  <string name="conversation_list_search_description">Тражи</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Фотографија контакта</string>
   <string name="conversation_list_item_view__archived">Архивирано</string>
