--- a/res/values-sw/strings.xml
+++ b/res/values-sw/strings.xml
@@ -11,6 +11,7 @@
   <string name="AbstractNotificationBuilder_new_message">Ujumbe mpya</string>
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+ %d</string>
+  <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Hivi sasa:  %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Bado hujapanga tungo</string>
@@ -813,8 +814,6 @@ nambari yako ya simu</string>
   <string name="database_migration_activity__import">kuagiza</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">Hii itachukua muda.  Tafadhali kuwa mvumilivu,  tutakujulisha wakati ingizaji ukikamilika.</string>
   <string name="database_migration_activity__importing">kupokea</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">sasisha database</string>
   <string name="import_fragment__import_system_sms_database">Ingiza mfumo wa ujumbe database</string>
   <string name="import_fragment__import_the_database_from_the_default_system">Ingiza database kutoka kwa programu ya mjumbe wa mfumo wa chaguo msingi</string>
   <string name="import_fragment__import_plaintext_backup">ingiza backup isiyo na maandishi</string>
@@ -1074,6 +1073,7 @@ nambari yako ya simu</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">isiyochaguliwa kuchaguliwa</string>
   <!--conversation_list-->
   <string name="conversation_list_settings_shortcut">Njia ya mkato wa mipangilio</string>
+  <string name="conversation_list_search_description">Tafuta</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">wasiliana na simu ya picha</string>
   <string name="conversation_list_item_view__archived">Sanikisha</string>
