--- a/res/values-th/strings.xml
+++ b/res/values-th/strings.xml
@@ -9,6 +9,7 @@
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">ข้อความใหม่</string>
   <!--AlbumThumbnailView-->
+  <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">ขณะนี้: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">คุณยังไม่ได้ตั้งวลีรหัสผ่าน</string>
@@ -796,8 +797,6 @@
   <string name="database_migration_activity__import">นำเข้า</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">นี่อาจใช้เวลาสักพัก กรุณารอ เราจะแจ้งคุณเมื่อการนำเข้าเสร็จสมบูรณ์</string>
   <string name="database_migration_activity__importing">กำลังนำเข้า</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">กำลังปรับปรุงฐานข้อมูล...</string>
   <string name="import_fragment__import_system_sms_database">นำเข้าฐานข้อมูล SMS ของระบบ</string>
   <string name="import_fragment__import_the_database_from_the_default_system">นำเข้าฐานข้อมูลจากแอปรับส่งข้อความเริ่มต้นของระบบ</string>
   <string name="import_fragment__import_plaintext_backup">นำเข้าการสำรองข้อมูลที่ไม่ได้เข้ารหัส</string>
@@ -1051,6 +1050,7 @@
   <string name="conversation_list_batch_archive__menu_archive_selected">เก็บที่เลือกเข้าที่เก็บถาวร</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">นำที่เลือกออกจากที่เก็บถาวร</string>
   <!--conversation_list-->
+  <string name="conversation_list_search_description">ค้นหา</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">รูปภาพของผู้ติดต่อ</string>
   <string name="conversation_list_item_view__archived">ถูกเก็บเข้าที่เก็บถาวรแล้ว</string>
