--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -11,6 +11,7 @@
   <string name="AbstractNotificationBuilder_new_message">Нове повідомлення</string>
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
+  <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">Поточний: %s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">Ви ще не встановили фразу-пароль!</string>
@@ -902,8 +903,6 @@
   <string name="database_migration_activity__import">Імпорт</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">Це може зайняти якийсь час. Будь ласка, наберіться терпіння, ми вам повідомимо, коли імпортування завершиться.</string>
   <string name="database_migration_activity__importing">ІМПОРТУВАННЯ</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">Оновлення бази даних...</string>
   <string name="import_fragment__import_system_sms_database">Імпортувати системну базу SMS</string>
   <string name="import_fragment__import_the_database_from_the_default_system">Імпортувати дані з типової програми обміну повідомленнями</string>
   <string name="import_fragment__import_plaintext_backup">Імпорт незашифрованої резервної копії</string>
@@ -1167,6 +1166,7 @@
   <string name="conversation_list_batch_archive__menu_archive_selected">Архівувати обране</string>
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">Розархівувати обране</string>
   <!--conversation_list-->
+  <string name="conversation_list_search_description">Пошук</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">Зображення контакту</string>
   <string name="conversation_list_item_view__archived">Архівовано</string>
