--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -11,6 +11,7 @@
   <string name="AbstractNotificationBuilder_new_message">新信息</string>
   <!--AlbumThumbnailView-->
   <string name="AlbumThumbnailView_plus">\+%d</string>
+  <!--ApplicationMigrationActivity-->
   <!--ApplicationPreferencesActivity-->
   <string name="ApplicationPreferencesActivity_currently_s">当前：%s</string>
   <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">您尚未设置密码！</string>
@@ -910,8 +911,6 @@
   <string name="database_migration_activity__import">导入</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">请稍候，这需要一些时间，当导入结束后我们将通知您。</string>
   <string name="database_migration_activity__importing">正在导入</string>
-  <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">更新数据库…</string>
   <string name="import_fragment__import_system_sms_database">导入系统短信数据库</string>
   <string name="import_fragment__import_the_database_from_the_default_system">从系统默认短信程序导入数据库</string>
   <string name="import_fragment__import_plaintext_backup">导入明文备份</string>
@@ -1176,6 +1175,7 @@
   <string name="conversation_list_batch_unarchive__menu_unarchive_selected">已选择取消存档</string>
   <!--conversation_list-->
   <string name="conversation_list_settings_shortcut">设置快捷方式</string>
+  <string name="conversation_list_search_description">搜索</string>
   <!--conversation_list_item_view-->
   <string name="conversation_list_item_view__contact_photo_image">联系人照片</string>
   <string name="conversation_list_item_view__archived">存档</string>
